# ascend-vio-drone

./: .gitignore  Qualif.py  README.md  check_xy_offsets.py  check_xy_offsets_2.py  gen_rtl.py  gps_mission_ros1.py  isro_current.param  loiter_sweep_m1.py  loiter_sweep_m2.py  offline_detector.py  project_handoff.md  pull_arena_nav.py  push_arena_nav.py  sync_arena_nav.py  vio_mission.cpp  vio_mission_m2.py  vio_mission_ros1.py  vio_missions_m1_m3.py  yellow_border_node.py
elimination_round/: arena_nav_guided.py  arena_nav_loiter.py  arena_nav_loiter_rtl.py  hsv_tuner.py  yellow_border_node.py
finals/: corner_VerticalTakeoff_arena_loiter_rtl.py  corner_detection.py
finals/guided/: guided_takeoff_forward.py
gcs/gcs/: ascend_gcs.py  batch_verify.py  charging.ino  charging_data.py  check_xy_offsets_5.py  requirements.txt  ssh_manager.py  styles.py  workers.py
isro_ws_src/realsense_publisher/: CMakeLists.txt  package.xml
openvins_vio/: README.md
openvins_vio/docs/: 01_hardware_wiring.md  02_jetson_setup.md  03_docker_build_run.md  04_ardupilot_params.md  05_calibration.md  06_testing.md  (+2 more)
openvins_vio/src/vio_bridge/: CMakeLists.txt  package.xml
openvins_vio/src/vio_bridge/launch/: full_pipeline.launch  mavros_apm.launch  openvins.launch  realsense_vio.launch  vio_bridge.launch
openvins_vio/src/vio_bridge/scripts/: vio_bridge_node.py
seed_tracker_src/: __init__.py  capture.py  config.py  flight_recorder.py  seeds.py  survey.py  survey_main.py  survey_runner.py  texture_main.py  texture_match.py  texture_pipeline.py
test/: takeoff_land_test.py
(+22 files in other folders)
