<?xml version="1.0"?>
<package format="2">
  <name>vio_bridge</name>
  <version>1.0.0</version>
  <description>OpenVINS to MAVROS vision_pose bridge</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
</package>
